--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "fcc-learn-npm-package-json",
   "dependencies": {
-    "express": "^4.14.0",
-    "chrono-node": "^1.3.5"
+    "express": "^4.14.0"
   },
   "main": "server.js",
   "scripts": {
